WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127060
AX: [ATK] Lists with selectable children should have ATK_ROLE_LIST_BOX
https://bugs.webkit.org/show_bug.cgi?id=127060
Summary
AX: [ATK] Lists with selectable children should have ATK_ROLE_LIST_BOX
Joanmarie Diggs
Reported
2014-01-15 12:48:05 PST
Created
attachment 221293
[details]
accessible-event listener: listbox.py Steps to reproduce: 1. Launch the attached accessible-event listener in a terminal 2. Launch the test case in Epiphany 3. Tab to move focus into the list Expected result: The control with the selectable children would have ROLE_LIST_BOX. Actual result: The control with the selectable children has ROLE_LIST. Giving this object the same role as (un)ordered lists means that additional checks have to be made by ATs trying to figure out what sort of object a given list item (or list) really is.
Attachments
accessible-event listener: listbox.py
(418 bytes, text/x-python)
2014-01-15 12:48 PST
,
Joanmarie Diggs
no flags
Details
test case: listbox.html
(265 bytes, text/html)
2014-01-15 12:48 PST
,
Joanmarie Diggs
no flags
Details
Patch
(3.52 KB, patch)
2014-11-14 17:44 PST
,
Joanmarie Diggs
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-01-15 12:48:25 PST
<
rdar://problem/15827732
>
Joanmarie Diggs
Comment 2
2014-01-15 12:48:49 PST
Created
attachment 221294
[details]
test case: listbox.html
Joanmarie Diggs
Comment 3
2014-11-14 17:44:17 PST
Created
attachment 241647
[details]
Patch
WebKit Commit Bot
Comment 4
2014-11-15 23:34:22 PST
Comment on
attachment 241647
[details]
Patch Clearing flags on attachment: 241647 Committed
r176160
: <
http://trac.webkit.org/changeset/176160
>
WebKit Commit Bot
Comment 5
2014-11-15 23:34:25 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug