AX: [ATK] Lists with selectable children should have ATK_ROLE_LIST_BOX https://bugs.webkit.org/show_bug.cgi?id=127060

Reviewed by Chris Fleizach.

Source/WebCore:

Corrected the mapping from ATK_ROLE_LIST to ATK_ROLE_LIST_BOX.

No new tests. Instead, updated the expectations of roles-exposed.html to
reflect the corrected mapping.

* accessibility/atk/WebKitAccessibleWrapperAtk.cpp:
(atkRole):

LayoutTests:

Updated the expectations to reflect the corrected role.

* platform/efl/accessibility/roles-exposed-expected.txt: updated
* platform/gtk/accessibility/roles-exposed-expected.txt: updated


Canonical link: https://commits.webkit.org/156618@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176160 268f45cc-cd09-0410-ab3c-d52691b4dbfc